Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-namespace
  labels:
    env: production
