Kubernetes/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset # Nama unik untuk StatefulSet
  labels:
    app: nginx # Label untuk aplikasi nginx
spec:
  serviceName: "nginx" # Nama Service yang digunakan untuk mengakses StatefulSet
  replicas: 3 # Menjalankan 3 replika dari Pod ini
  selector:
    matchLabels:
      app: nginx # Menyesuaikan dengan label Pod yang akan dijalankan
  template:
    metadata:
      labels:
        app: nginx # Label pada Pod template
    spec:
      containers:
        - name: nginx
          image: nginx:latest # Gambar yang digunakan untuk menjalankan kontainer
          ports:
            - containerPort: 80 # Port yang digunakan kontainer
          livenessProbe:
            httpGet:
              path: /healthz # Jalankan HTTP GET ke /healthz untuk memeriksa apakah kontainer hidup
              port: 80 # Port yang digunakan untuk memeriksa kontainer
            initialDelaySeconds: 5 # Tunggu 5 detik setelah kontainer dimulai sebelum probe dijalankan
            periodSeconds: 10 # Lakukan pemeriksaan setiap 10 detik
            failureThreshold: 3 # Gagal 3 kali berturut-turut, kontainer dianggap mati
          readinessProbe:
            httpGet:
              path: / # Jalankan HTTP GET ke / untuk memeriksa apakah kontainer siap
              port: 80 # Port yang digunakan untuk memeriksa kesiapan
            initialDelaySeconds: 10 # Tunggu 10 detik setelah kontainer dimulai sebelum pemeriksaan pertama
            periodSeconds: 5 # Lakukan pemeriksaan setiap 5 detik
            failureThreshold: 2 # Gagal 2 kali berturut-turut, Pod dianggap belum siap
            successThreshold: 1 # Satu keberhasilan berturut-turut dianggap siap
      nodeSelector:
        disktype: ssd # Pod ini hanya akan dijadwalkan pada node dengan label "disktype: ssd"
